@startuml

title __DECORATOR's Class Diagram__\n

  namespace  {
    namespace om.example.decorator {
      class com.example.decorator.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.decorator {
      class com.example.decorator.HelloController {
      }
    }
  }
  

  namespace  {
    namespace odel {
      interface model.ChristmasTree {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.ChristmasTreeImpl {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Light {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Presents {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Snowman {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Star {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.TreeDecorator {
      }
    }
  }
  

  com.example.decorator.HelloApplication -up-|> javafx.application.Application
  model.ChristmasTreeImpl .up.|> model.ChristmasTree
  model.Light -up-|> model.TreeDecorator
  model.Presents -up-|> model.TreeDecorator
  model.Snowman -up-|> model.TreeDecorator
  model.Star -up-|> model.TreeDecorator
  model.TreeDecorator .up.|> model.ChristmasTree
  model.TreeDecorator o-- model.ChristmasTree : tree


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
